--- a/lite-rpc-demo/pom.xml
+++ b/lite-rpc-demo/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.example.rpc</groupId>
         <artifactId>lite-rpc</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>lite-rpc-demo</artifactId>
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <!--引入zookeeper-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
