--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>lite-rpc-demo</module>
+        <module>lite-rpc-framework</module>
+        <module>lite-rpc-framework/lite-rpc-common</module>
+        <module>lite-rpc-framework/lite-rpc-core</module>
+        <module>lite-rpc-registry</module>
     </modules>
 
     <properties>
