--- a/lite-rpc-demo/lite-rpc-demo-consumer/pom.xml
+++ b/lite-rpc-demo/lite-rpc-demo-consumer/pom.xml
@@ -8,10 +8,10 @@
     </parent>
 
     <groupId>org.example.rpc.demo</groupId>
-    <artifactId>lite-rpc-demo-server</artifactId>
+    <artifactId>lite-rpc-demo-consumer</artifactId>
     <packaging>jar</packaging>
 
-    <name>lite-rpc-demo-server</name>
+    <name>lite-rpc-demo-client</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -20,10 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.example.rpc.demo</groupId>
+            <artifactId>lite-rpc-demo-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
