--- a/lite-rpc-demo/lite-rpc-demo-consumer/pom.xml
+++ b/lite-rpc-demo/lite-rpc-demo-consumer/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>lite-rpc-demo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
