--- a/lite-rpc-demo/lite-rpc-demo-provider/pom.xml
+++ b/lite-rpc-demo/lite-rpc-demo-provider/pom.xml
@@ -29,5 +29,15 @@
             <artifactId>lite-rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--sl4j-api-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
