--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>lite-rpc-framework/lite-rpc-common</module>
         <module>lite-rpc-framework/lite-rpc-core</module>
         <module>lite-rpc-registry</module>
+        <module>lite-rpc-framework/lite-rpc-manager</module>
     </modules>
 
     <properties>
