--- a/lite-rpc-framework/lite-rpc-core/pom.xml
+++ b/lite-rpc-framework/lite-rpc-core/pom.xml
@@ -27,5 +27,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
