--- a/lite-rpc-framework/lite-rpc-manager/pom.xml
+++ b/lite-rpc-framework/lite-rpc-manager/pom.xml
@@ -20,8 +20,24 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
