feat: 新增remoting-zookeeper module，移动全部zookeeper操作到此module下

--- a/lite-rpc-framework/lite-rpc-remoting-zookeeper/pom.xml
+++ b/lite-rpc-framework/lite-rpc-remoting-zookeeper/pom.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -11,18 +9,17 @@
     </parent>
 
     <groupId>org.example.rpc.remoting</groupId>
-    <artifactId>lite-rpc-remoting</artifactId>
+    <artifactId>lite-rpc-remoting-zookeeper</artifactId>
+    <packaging>jar</packaging>
+
+    <name>lite-rpc-remoting-zookeeper</name>
+    <url>http://maven.apache.org</url>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -36,5 +33,11 @@
             <artifactId>lite-rpc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
