--- a/lite-rpc-demo/lite-rpc-demo-provider/pom.xml
+++ b/lite-rpc-demo/lite-rpc-demo-provider/pom.xml
@@ -24,6 +24,15 @@
             <artifactId>lite-rpc-demo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
         <!--sl4j-api-->
         <dependency>
             <groupId>org.slf4j</groupId>
