--- a/lite-rpc-framework/lite-rpc-core/pom.xml
+++ b/lite-rpc-framework/lite-rpc-core/pom.xml
@@ -27,10 +27,12 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.example.rpc</groupId>
-            <artifactId>lite-rpc-common</artifactId>
+            <groupId>org.example.rpc.remoting</groupId>
+            <artifactId>lite-rpc-remoting-zookeeper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 </project>
