--- a/lite-rpc-framework/lite-rpc-manager/pom.xml
+++ b/lite-rpc-framework/lite-rpc-manager/pom.xml
@@ -25,6 +25,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
@@ -38,6 +39,20 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.example.rpc.remoting</groupId>
+            <artifactId>lite-rpc-remoting-zookeeper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 </project>
