--- a/lite-rpc-framework/lite-rpc-registry/pom.xml
+++ b/lite-rpc-framework/lite-rpc-registry/pom.xml
@@ -20,10 +20,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.example.rpc.remoting</groupId>
+            <artifactId>lite-rpc-remoting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.example.rpc</groupId>
+            <artifactId>lite-rpc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
